infrastructure/mysql/base/mysql-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shuailli.online
      secretName: shuailli-tls-secret
  rules:
    - host: "shuailli.online"
      http:
        paths:
          - path: /mysql-client/?(.*)
            pathType: Prefix
            backend:
              service:
                name: mysql-client
                port:
                  number: 80
